--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ alembic==0.9.7
 Babel==2.5.3
 beautifulsoup4==4.6.0
 blinker==1.4
+certifi==2018.4.16
 click==6.7
 dominate==2.3.1
 elasticsearch==6.2.0
