--- a/requirements.txt
+++ b/requirements.txt
@@ -1,39 +1,37 @@
-alembic==0.9.6
-Babel==2.5.1
+alembic==0.9.7
+Babel==2.5.3
+beautifulsoup4==4.6.0
 blinker==1.4
-certifi==2017.7.27.1
-chardet==3.0.4
+certifi==2018.4.16
 click==6.7
 dominate==2.3.1
-elasticsearch==6.1.1
+elasticsearch==6.2.0
 Flask==0.12.2
 Flask-Babel==0.11.2
 Flask-Bootstrap==3.3.7.1
-Flask-Login==0.4.0
+Flask-Login==0.4.1
 Flask-Mail==0.9.1
 Flask-Migrate==2.1.1
-Flask-Moment==0.5.2
+Flask-Moment==0.6.0
 Flask-SQLAlchemy==2.3.2
 Flask-WTF==0.14.2
-guess_language-spirit==0.5.3
-idna==2.6
+guess-language-spirit==0.5.3
+gunicorn==19.8.1
 itsdangerous==0.24
-Jinja2==2.9.6
+Jinja2==2.10
 Mako==1.0.7
 MarkupSafe==1.0
-PyJWT==1.5.3
+psycopg2==2.7.4
+PyJWT==1.6.1
 python-dateutil==2.6.1
-python-dotenv==0.7.1
+python-dotenv==0.8.2
 python-editor==1.0.3
-pytz==2017.2
-requests==2.18.4
+pytz==2018.4
+redis==2.10.6
+rq==0.10.0
 six==1.11.0
-SQLAlchemy==1.1.14
+SQLAlchemy==1.2.1
 urllib3==1.22
 visitor==0.1.3
-Werkzeug==0.12.2
+Werkzeug==0.14.1
 WTForms==2.1
-
-# requirements for Heroku
-#psycopg2==2.7.3.1
-#gunicorn==19.7.1
