--- a/requirements.txt
+++ b/requirements.txt
@@ -37,6 +37,5 @@ Werkzeug==0.12.2
 WTForms==2.1
 
 # requirements for Heroku
-#psycopg2==2.7.4
-#gunicorn==19.8.1
-psycopg2-binary==2.7.4
+psycopg2==2.7.4
+gunicorn==19.8.1
