--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ elasticsearch==6.1.1
 Flask==0.12.2
 Flask-Babel==0.11.2
 Flask-Bootstrap==3.3.7.1
+Flask-HTTPAuth==3.2.3
 Flask-Login==0.4.0
 Flask-Mail==0.9.1
 Flask-Migrate==2.1.1
@@ -37,5 +38,5 @@ Werkzeug==0.12.2
 WTForms==2.1
 
 # requirements for Heroku
-psycopg2==2.7.4
-gunicorn==19.8.1
+psycopg2==2.7.3.1
+gunicorn==19.7.1
